--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jenesius-event-emitter",
-  "version": "1.0.0",
-  "description": "Event emitter with hooks",
+  "version": "1.0.2",
+  "description": "Simple, small and with off-hook.",
   "private": false,
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.js",
@@ -9,8 +9,13 @@
   "files": [
     "dist"
   ],
+
   "scripts": {
 
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Jenesius/event-emitter.git"
   },
   "author": "Jenesius",
   "license": "MIT",
