--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
   "scripts": {
 
   },
+  "keywords": [
+    "event",
+    "events",
+    "event-bus",
+    "event-emitter"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Jenesius/event-emitter.git"
