--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jenesius-event-emitter",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Simple, small and with off-hook.",
   "private": false,
   "main": "./dist/index.cjs.js",
@@ -9,10 +9,7 @@
   "files": [
     "dist"
   ],
-
-  "scripts": {
-
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/Jenesius/event-emitter.git"
@@ -20,6 +17,8 @@
   "author": "Jenesius",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.2"
+    "@rollup/plugin-typescript": "^8.3.2",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
   }
 }
