--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,9 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": true,
-    "declarationDir": "dts"
+    "declarationDir": "dts",
+
   },
 }
